--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -114,7 +114,8 @@ header {
   top: 0;
   left: 0;
   z-index: 2;
-  
+  -webkit-backdrop-filter: blur(40px);
+  backdrop-filter: blur(20px);
   //   filter: blur(1.5rem);
   @include f(center, center);
   .box {
